feat(sdk): SDK 改为 Java 8（javac release=8，产物 class 52.0）
- HTTP 层重写：java.net.http.HttpClient（Java 11）→ java.net.HttpURLConnection，
  零运行时依赖不变；async 改为懒建守护线程池，close() 收编线程池
- HttpErrorMapper 头签名改 Map<String,List<String>>，Retry-After 大小写不敏感解析
- 扫除 Java 9+ API：List.of/Set.of → Collections/Arrays、isBlank → trim().isEmpty()、
  URLEncoder Charset 重载 → 字符串重载、CompletableFuture.delayedExecutor 移除
- 测试按 testRelease 11 编译（wiremock 3.x 需要 Java 11 字节码，仅构建期使用）；
  93 测全过
- 重打两个自包含 sdk-dist jar；Demo + README 同步 JDK 8
- 实测：Temurin JDK 8（javac/java 1.8.0_492）编译并运行两个 Demo 打通真实后端

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>