@@ -232,7 +232,11 @@ public final class PodRadarClient implements AutoCloseable {
     }
 
     private static String urlEncode(String s) {
-        return URLEncoder.encode(s, StandardCharsets.UTF_8);
+        try {
+            return URLEncoder.encode(s, StandardCharsets.UTF_8.name());
+        } catch (java.io.UnsupportedEncodingException e) {
+            throw new AssertionError("UTF-8 is always supported", e);
+        }
     }
 
     /** Returns the read-only effective config. */
@@ -240,7 +244,7 @@ public final class PodRadarClient implements AutoCloseable {
 
     @Override
     public void close() {
-        // java.net.http.HttpClient has no explicit close in JDK 11; nothing to release.
+        http.close(); // shuts down the async pool if one was ever created
     }
 
     // ───── Builder ────────────────────────────────────────────────────
